--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             android:text="Favorites"
             android:textSize="30dp" />
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/favorites"
+            android:id="@+id/myfba"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="horizontal" />
